assets/css/style.css
/* ... */
.button:hover {
  background: gray;
}
@media (min-width: 769px) {
  .button-container {
    display: flex;
    align-items: center;
    justify-content: flex-end;
  }
}

/*--------------------------------------------------------------
# cards
--------------------------------------------------------------*/
.card {
  box-sizing: border-box;
  width: 150px;
  display: inline-block;
  margin: 1rem;
  /* border-radius: 4px; */
  box-shadow: 0 -1px 1px 0 rgba(0, 0, 0, 0.05), 0 1px 2px 0 rgba(0, 0, 0, 0.2);
  transition: all 0.2s ease;
  background: #fff;
  position: relative;
  overflow: hidden;
}
.card:hover,
.card.hover {
  transform: translateY(-4px);
  box-shadow: 0 4px 25px 0 rgba(0, 0, 0, 0.3), 0 0 1px 0 rgba(0, 0, 0, 0.25);
}

.card:hover .card-img .overlay,
.card.hover .card-img .overlay {
  background-color: rgba(25, 29, 38, 0.85);
  transition: opacity 0.2s ease;
  opacity: 1;
}

.card-img {
  position: relative;
  height: 220px;
  width: 148px;
  background-color: #fff;
  transition: opacity 0.2s ease;
  background-position: center center;
  background-repeat: no-repeat;
  background-size: cover;
}
.card-img .overlay {
  position: absolute;
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
  background-color: #fff;
  opacity: 0;
}
.card-img .overlay .overlay-content {
  line-height: 224px;
  width: 100%;
  text-align: center;
  color: #fff;
}
.card-img .overlay .overlay-content a {
  color: #fff;
  padding: 0 2rem;
  display: inline-block;
  border: 1px solid rgba(255, 255, 255, 0.4);
  height: 40px;
  line-height: 40px;
  border-radius: 20px;
  cursor: pointer;
  text-decoration: none;
  font-size: 13px;
}
.card-img .overlay .overlay-content a:hover,
.card-img .overlay .overlay-content a.hover {
  background: #8f3f1f;
  border-color: #8f3f1f;
}
.card-content {
  width: 100%;
  min-height: 65px;
  background-color: #fff;
  border-bottom-right-radius: 4px;
  border-bottom-left-radius: 4px;
  padding: 5px 5px;
  transition: all 0.2s ease;
}
.card-content a {
  text-decoration: none;
  color: #202927;
}
.card-content h2,
a h2 {
  font-size: 15px;
  font-weight: 500;
  text-align: center;
}

/*--------------------------------------------------------------
# Index
--------------------------------------------------------------*/
.index .index-page-content {
  font-size: 15px;
  color: #666666;
  padding: 55px 0px 50px 0px;
}
.index .info-text {
  padding: 0px 20px 0px 20px;
  margin: 10px 0px 10px 0px;
}
.index .info-text p {
  font-size: 18px;
  color: #666666;
  padding: 0px;
  margin: 0px;
}
.index .image-wrapper {
  margin: 20px 0px 20px 0px;
}
.index .image {
  display: flex;
  margin-bottom: 5px;
  justify-content: center;
}
.index .image img {
  display: flex;
  height: 100%;
  object-fit: contain;
  overflow: hidden;
}
.index .index-page-content h3 {
  text-align: center;
}
.index a {
  text-decoration: underline;
}
/*--------------------------------------------------------------
# About
--------------------------------------------------------------*/
.about .info-text p {
  font-size: 18px;
  color: #666666;
  padding: 0px;
  margin: 0px;
}
.about .image {
  display: flex;
  margin: 20px 0px 20px 0px;
  justify-content: center;
}
.about .image img {
  object-fit: contain;
  overflow: hidden;
}
.about .author-image img {
  display: flex;
  width: 100%;
  margin: 0px 0px 20px 0px;
  justify-content: center;
}
.about .about-page-content {
  margin: 0px;
  padding: 50px 0px 0px 0px;
}
.about-books-i-love .card {
  padding: 0px;
}
.about-books-i-love .row {
  justify-content: center;
}
.about-podcasts-i-love .card {
  padding: 0px;
}
.about-podcasts-i-love .row {
  justify-content: center;
}
.about a {
  text-decoration: underline;
}
.about-podcasts-i-love {
  margin: 0px;
  padding-bottom: 50px;
}
/*--------------------------------------------------------------
# Contact
--------------------------------------------------------------*/
.contact p {
  text-align: center;
}
.contact .row {
  justify-content: center;
}
.contact a {
  text-decoration: underline;
}
.contact .contact-page-content {
  margin: 0px;
  padding: 50px 0px 0px 0px;
}

/*--------------------------------------------------------------
# question
--------------------------------------------------------------*/
.question .email-form {
  width: 100%;
  background: #fff;
}
.question .email-form .form-group {
  padding-bottom: 8px;
}
.question .email-formm .loading:before {
  content: "";
  display: inline-block;
  border-radius: 50%;
  width: 24px;
  height: 24px;
  margin: 0 10px -6px 0;
  border: 3px solid #8f3f1f;
  border-top-color: #eee;
}
.question .email-form input,
.question .email-form textarea {
  border-radius: 0;
  box-shadow: none;
  font-size: 14px;
  border-radius: 4px;
}
.question .email-form input:focus,
.question .email-form textarea:focus {
  border-color: #8f3f1f;
}
.question .email-form input {
  height: 44px;
}
.question .email-form textarea {
  padding: 10px 12px;
}
.contact .email-form button[type="submit"] {
  background: #8f3f1f;
  border: 0;
  padding: 10px 30px;
  color: #fff;
  transition: 0.4s;
  border-radius: 50px;
}
.question .email-form button[type="submit"]:hover {
  background: #c27e63;
}
.question p {
  text-align: center;
}
.question .row {
  justify-content: center;
}
.question .button {
  font-family: "Cedarville Cursive", sans-serif;
}
.question a {
  text-decoration: underline;
}
.question .question-page-content {
  margin: 0px;
  padding: 0px 0px 50px 0px;
}
/*--------------------------------------------------------------
# Press
--------------------------------------------------------------*/
.press .row {
  justify-content: center;
}
.press .card {
  width: 100%;
  margin: 0px;
}
.press .card .card-img {
  width: 100%;
}
.press .card-content h2 {
  text-align: left;
  font-weight: bold;
  font-size: 18px;
}
.press .card-content p {
  text-align: left;
}
.card-img-book-cover {
  background-size: contain;
}
/* ... */

